# DeathStarBench-mesh

socialNetwork/docker/thrift-microservice-deps/cpp/: Dockerfile
socialNetwork/nginx-web-server/lua-scripts/wrk2-api/home-timeline/: read.lua
socialNetwork/nginx-web-server/lua-scripts/wrk2-api/post/: compose.lua
socialNetwork/nginx-web-server/lua-scripts/wrk2-api/user/: follow.lua  register.lua  unfollow.lua
socialNetwork/nginx-web-server/lua-scripts/wrk2-api/user-timeline/: read.lua
socialNetwork/src/: ClientPool.h  Dockerfile  HttpClientWrapper.h  launch_each_service.sh  social_network_types.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
socialNetwork/src/MediaService/: CMakeLists.txt  MediaHandler.h  MediaService.cpp
socialNetwork/src/PostStorageService/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
socialNetwork/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
socialNetwork/src/UserTimelineService/: CMakeLists.txt  UserTimelineHandler.h  UserTimelineService.cpp
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt  WriteHomeTimelineService.cpp
